Clarify mss/mdx in ch1

--- a/latex/ch1.tex
+++ b/latex/ch1.tex
@@ -6,15 +6,15 @@
 
 The study of acoustic signals forms the core of many fields including sonar, seismology, audio, music, and speech. Acoustic signals are functions of time, representing the evolving amplitude of the sound pressure wave \parencite{melbook}. Another way to characterize acoustic signals is by their frequency components, which can be computed from the Fourier Transform \parencite{melbook}.
 
-One downside of the Fourier Transform is that it contains no temporal information -- the Fourier Transform represents the frequency components of an acoustic signal by a sum of infinite sinusoids, but it does not describe how these frequencies evolve with time \parencite{gabordiagrams}. Many important signals such as speech and music contain frequency components that change with time \parencite{gabor1946}. However, Fourier analysis alone is not enough to represent variable-frequency sounds. For these signals, joint time-frequency analysis is an essential tool.
+One downside of the Fourier Transform is that it contains no temporal information; the Fourier Transform represents the frequency components of an acoustic signal by a sum of infinite sinusoids, but it does not describe how these frequencies evolve with time \parencite{gabordiagrams}. Conversely, many important signals such as speech and music contain frequency components that change with time \parencite{gabor1946}. For these signals, joint time-frequency analysis is required.
 
 Time-frequency analysis is performed by multiplying the signal being studied by finite, consecutive windows of a short duration, and taking the Fourier Transform of each windowed section. This is also referred to as the Short-Time Fourier Transform (STFT) or spectrogram \parencite{melbook}. \textcite{melbook} describe the resulting spectral analysis as an important technique in analyzing and understanding audio that has been in use since the 1930s.
 
-The STFT is subject to a fixed and bounded time-frequency resolution, such that one cannot be arbitrarily precise in both time and frequency, and must trade them off by changing the duration of the window \parencite{gabor1946, gabordiagrams}. Improving the fixed time-frequency resolution of the STFT-based spectrogram in the visualization and analysis of general audio is an important direction of research \parencite{bettertfres1, bettertfres2}.
+Music source separation is the task of extracting an estimate of one or more isolated sources or instruments (for example, drums or vocals) from musical audio \parencite{musicsepgood, musicmask}. The task of music demixing or unmixing considers the case where the musical audio is separated into an estimate of all of its constituent sources that can be summed back to the original mixture.\footnote{Thanks to Fabian-Robert St{\"o}ter for the discussion on the difference between music source separation, demixing, and unmixing.} Music demixing systems commonly split mixed songs into four sources: vocals, drums, bass, and other (guitar, piano, etc.), following the example of mixing and demixing datasets \parencite{sisec2016, otherdataset2, musdb18, musdb18hq}.
 
-In the task of music source separation, or music demixing, a mixed song which is a linear mixture of several sources is split or \textit{de-mixed} back into its original sources \parencite{musicsepgood, musicmask}. Music demixing systems commonly split mixed songs into four sources: vocals, drums, bass, and other (guitar, piano, etc.), following the example of open mixing and demixing datasets \parencite{sisec2016, otherdataset2, musdb18, musdb18hq}.
+The STFT is a popular tool used by various music demixing systems throughout the years \parencite{musicsepgood, musicmask, sisec2018, fitzgerald1, umx, plumbley1, plumbley2}. However, the STFT is subject to a fixed and bounded time-frequency resolution, such that one cannot have maximal resolution in both time and frequency, and must trade them off by changing the duration of the window \parencite{gabor1946, gabordiagrams}.
 
-The STFT spectrogram is a popular tool used by various music demixing systems throughout the years \parencite{musicsepgood, musicmask, sisec2018, fitzgerald1, umx, plumbley1, plumbley2}. The tradeoff of time-frequency resolution is an important consideration in these systems \parencite{tftradeoff1, tftradeoff2} Music demixing systems have been proposed that use multiple window sizes of STFT \parencite{fitzgerald2, driedger} or that replace the STFT with different time-frequency transforms \parencite{fitzgerald2, cqtseparation, bettermusicsep}, to improve results through the manipulation of time-frequency resolution.
+The tradeoff in time-frequency resolution is an important consideration in music demixing \parencite{tftradeoff1, tftradeoff2}. Systems have been proposed that use multiple STFTs \parencite{fitzgerald2, driedger} or that replace the STFT with different time-frequency transforms \parencite{fitzgerald2, cqtseparation, bettermusicsep}, to improve results through the manipulation of time-frequency resolution.
 
 \subsection{Motivation}
 \label{sec:motivation}
