Begin serious work on MML presentation

--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1645,3 +1645,17 @@ doi = {10.11591/ijece.v11i3.pp2315-2326}
     %url = {https://doi.org/10.1162/neco\_a\_01199},
     %eprint = {https://direct.mit.edu/neco/article-pdf/31/7/1235/1053200/neco\_a\_01199.pdf},
 }
+@inproceedings{kong2021decoupling,
+      title={Decoupling Magnitude and Phase Estimation with Deep ResUNet for Music Source Separation}, 
+      author={Qiuqiang Kong and Yin Cao and Haohe Liu and Keunwoo Choi and Yuxuan Wang},
+      year={2021},
+      booktitle={22nd International Society for Music Information Retrieval Conference},
+}
+@article{demucsplus,
+      title={Hybrid Spectrogram and Waveform Source Separation},
+      author={Alexandre D{\'e}fossez},
+      year={2021},
+  journal={arXiv preprint arXiv:2111.03600},
+  url={https://arxiv.org/abs/2111.03600},
+}
+@inproceedings{choi_2020, Author = {Choi, Woosung and Kim, Minseok and Chung, Jaehwa and Lee, Daewon and Jung, Soonyoung}, Booktitle = {21th International Society for Music Information Retrieval Conference}, Editor = {ISMIR}, Month = {OCTOBER}, Title = {Investigating U-Nets with various intermediate blocks for spectrogram-based singing voice separation.}, Year = {2020}}
