Last minute revisions to arXiv paper

--- a/arxiv-paper/paper.tex
+++ b/arxiv-paper/paper.tex
@@ -55,9 +55,9 @@
 \maketitle
 %
 \begin{abstract}
-	Music source separation, or music demixing, is the task of decomposing a song into its constituent sources, which are typically isolated instruments (e.g., drums, bass, and vocals). The Music Demixing Challenge\footnote{\url{https://www.aicrowd.com/challenges/music-demixing-challenge-ismir-2021}} \cite{mdx21} was created to inspire new demixing research. Open-Unmix (UMX) \cite{umx}, and the improved variant CrossNet-Open-Unmix (X-UMX) \cite{xumx}, were included in the challenge as the baselines. Both models use the Short-Time Fourier Transform (STFT) as the representation of music signals.
+	Music source separation is the task of extracting an estimate of one or more isolated sources or instruments (for example, drums or vocals) from musical audio. The task of music demixing or unmixing considers the case where the musical audio is separated into an estimate of all of its constituent sources that can be summed back to the original mixture. The Music Demixing Challenge\footnote{\url{https://www.aicrowd.com/challenges/music-demixing-challenge-ismir-2021}} \cite{mdx21} was created to inspire new demixing research. Open-Unmix (UMX) \cite{umx}, and the improved variant CrossNet-Open-Unmix (X-UMX) \cite{xumx}, were included in the challenge as the baselines. Both models use the Short-Time Fourier Transform (STFT) as the representation of music signals.
 
-	The time-frequency uncertainty principle states that the STFT of a signal cannot be maximally precise in both time and frequency \cite{gabor1946}. The tradeoff in time-frequency resolution can significantly affect music demixing results \cite{tftradeoff1}. Our proposed adaptation of UMX replaced the STFT with the sliCQT \cite{slicq}, a time-frequency transform with varying time-frequency resolution. Unfortunately, our model xumx-sliCQ\footnote{\url{https://github.com/sevagh/xumx-sliCQ}} achieved lower demixing scores than UMX.
+	The time-frequency uncertainty principle states that the STFT of a signal cannot have maximal resolution in both time and frequency \cite{gabor1946}. The tradeoff in time-frequency resolution can significantly affect music demixing results \cite{tftradeoff1}. Our proposed adaptation of UMX replaced the STFT with the sliCQT \cite{slicq}, a time-frequency transform with varying time-frequency resolution. Unfortunately, our model xumx-sliCQ\footnote{\url{https://github.com/sevagh/xumx-sliCQ}} achieved lower demixing scores than UMX.
 
 \end{abstract}
 %
@@ -86,7 +86,7 @@ The sliCQT parameters were chosen randomly in a 60-iteration search for the larg
 	\label{fig:spectrograms}
 \end{figure*}
 
-The STFT outputs a single time-frequency matrix where all of the frequency bins are spaced uniformly apart and have the same time resolution. The sliCQT groups frequency bins, which may be nonuniformly spaced, in a ragged list of time-frequency matrices, where each matrix contains frequency bins that share the same time resolution. In xumx-sliCQ, a Convolutional Denoising Autoencoder (CDAE) architecture (adapted from STFT-based music source separation models \cite{plumbley1, plumbley2}) was applied separately to each time-frequency matrix, shown in Figure \ref{fig:ragged}. Note how the sliCQT must be overlap-added to create a meaningful spectrogram; the inverse of the overlap-add, or de-overlap, was learned with a final transposed convolutional layer after the CDAE layers.
+The STFT outputs a single time-frequency matrix where all of the frequency bins are spaced uniformly apart and have the same time resolution. The sliCQT groups frequency bins, which may be nonuniformly spaced, in a ragged list of time-frequency matrices, where each matrix contains frequency bins that share the same time resolution. In xumx-sliCQ, a Convolutional Denoising Autoencoder (CDAE) architecture (adapted from STFT-based music source separation models \cite{plumbley1, plumbley2}) was applied separately to each time-frequency matrix, shown in Figure \ref{fig:ragged}. Note how the sliCQT must be overlap-added before being used as an input to the network; the de-overlap was learned with a final transposed convolutional layer after the CDAE layers.
 
 \begin{figure*}[h]
 	\includegraphics[width=\textwidth]{./xumx_slicq_pertarget.png}
